# depth

./: .gitignore  LICENSE  datasets.py  depth.ipynb  depth.py  depth_old.py  flow.py  flow_model.py  grad.py.ipynb  hierarchy.py  incremental.py  loss.py  predictor.py  profile_conv.py  pyproject.toml  pyramid.py  repl.ipynb  test_flow.py  test_hierarchy.py  test_upscale.py  train.py  upscale.py  visualize_prediction.py  wavelet.ipynb
datasets/: make_frames.sh
experiments/: depth.ipynb  grad.py.ipynb  warp.ipynb
src/depth/datasets/: frames.py  pyramids.py
src/depth/images/: load.py  pyramid.py  separable_convolution.py  upscale.py  valid_grid.py
src/depth/inference/: reflow.py
src/depth/model/: __init__.py  build.py  frame_pair_flow.py  loss.py  multi_level_flow.py  patch_flow.py  pyramid.py  settings.py  single_level_flow.py  train.py
src/depth/patches/: difference.py  extract.py  extract_shifted.py  flow.py  loss.py  loss_grid.py  shift.py
src/depth/train/: build.py
src/depth/training/: build.py  log.py  logging.py  train.py
