[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "depth"
version = "0.1.0"
description = "Single camera multi-pose depth estimation"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = ["example", "project"]

dependencies = ["jax (>=0.6.0,<0.7.0)", "flax (>=0.10.6,<0.11.0)", "pillow (>=11.2.1,<12.0.0)", "pywavelets (>=1.8.0,<2.0.0)", "jaxwt (>=0.1.1,<0.2.0)", "matplotlib (>=3.10.3,<4.0.0)", "optax (>=0.2.4,<0.3.0)", "tensorflow (>=2.19.0,<3.0.0)"]

[project.optional-dependencies]
dev = []

# [project.scripts]
# your_command = "your_package.module:main_function"

[project.urls]
"Homepage" = "https://github.com/rdarder/depth"
"Bug Tracker" = "https://github.com/rdarder/depth/issues"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipython = "^9.2.0"
python-lsp-server = "^1.12.2"

